# osiris-scanner

./: .gitignore  AUDIT_COMPLET_2026-02-17.md  LICENSE  RAPPORT_PROJET_OSIRIS.md  README.md  calibrate.py  pyproject.toml  report.py  scanner.py  scoring.py
.claude/: settings.local.json
.github/workflows/: soic-gate.yml
axes/: intrusion.py  performance.py  resource.py  security.py
benchmark/: run_benchmark.py
benchmark/inputs/: urls.txt
blocklists/: trackers.json
calibration/: results.json  sites.txt
scripts/: update_badge.py
soic_v3/: CLAUDE.md  SOIC-v3.0-CLAUDE-CLI-GUIDE.md  __init__.py  __main__.py  classifier.py  cli.py  converger.py  dashboard.py  feedback_router.py  gate_engine.py  iterator.py  models.py  osiris_adapter.py  persistence.py  unified_scorer.py
soic_v3/.claude/: settings.local.json
soic_v3/.claude/soic-v3/: RULES.md  SPEC.md  SPRINTS.md  STATE.md  STRATEGY.md
soic_v3/domain_grids/: __init__.py  code.py  infra.py  prompt.py  prose.py  web.py
soic_v3/infra/: __init__.py  circuit_breaker.py  error_handler.py  logging_config.py  metrics_exporter.py  parallel_processor.py  rate_limiter.py
soic_v3/scripts/: audit_truth.sh
tests/: test_integration.py  test_intrusion.py  test_performance.py  test_resource.py  test_scoring.py  test_security.py
tests/test_soic_v3/: test_converger.py  test_domain_code.py  test_feedback.py  test_gate_engine.py  test_models.py  test_persistence.py  test_unified.py
